Improve default skill costs